packages/yew-macro/tests/html_macro/block-fail.stderr
error[E0277]: `()` doesn't implement `std::fmt::Display`
 --> tests/html_macro/block-fail.rs:6:15
  |
6 |             { () }
  |               ^^
  |               |
  |               `()` cannot be formatted with the default formatter
  |               required by a bound introduced by this call
  |
  = help: the trait `std::fmt::Display` is not implemented for `()`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: required for `()` to implement `ToString`
  = note: required for `VNode` to implement `From<()>`
  = note: required for `()` to implement `Into<VNode>`
  = note: 2 redundant requirements hidden
  = note: required for `()` to implement `Into<NodeSeq<(), VNode>>`

error[E0277]: `()` doesn't implement `std::fmt::Display`
  --> tests/html_macro/block-fail.rs:15:17
   |
15 |         <>{ for (0..3).map(|_| not_tree()) }</>
   |                 ^^^^^^ `()` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `()`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: required for `()` to implement `ToString`
   = note: required for `VNode` to implement `From<()>`
   = note: required for `()` to implement `Into<VNode>`
note: required by a bound in `into_node_iter`
  --> $WORKSPACE/packages/yew/src/utils/mod.rs
   |
   | pub fn into_node_iter<IT, T, R>(it: IT) -> impl Iterator<Item = R>
   |        -------------- required by a bound in this function
...
   |     T: Into<R>,
   |        ^^^^^^^ required by this bound in `into_node_iter`
